--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <script src="https://raw.githack.com/jeromeetienne/AR.js/1.7.1/aframe/build/aframe-ar.js"></script>
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
-      <a-marker type="pattern" pattern="custom" patternUrl="pattern-marker111.patt" url="pattern-marker111.patt">
-          <a-box position='0 0.5 0' material='color: yellow;'></a-box>
-      </a-marker>
+		<a-box position='0 0.5 0' material='color: yellow;'></a-box>
+		<a-marker-camera preset='custom' type='pattern' url='pattern-marker111.patt'></a-marker-camera>
+   
       <a-entity camera></a-entity>
     </a-scene>
   </body>
