--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	
 
       <a-marker preset='custom' type='pattern' url='pattern-marker1.patt'>
-          <a-box position='0 0.5 0' material='color: yellow;'></a-box>
+          <!--<a-box position='0 0.5 0' material='color: yellow;'></a-box>-->
+		  <img src="pic.png" />
       </a-marker>
 	  
 	  
