--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
       <a-marker preset='custom' type='pattern' url='pattern-marker1.patt'>
           <!--<a-box position='0 0.5 0' material='color: yellow;'></a-box>-->
-		  <img src="pic.png" />
+		  <a-image src="pic.png"></a-image>
       </a-marker>
 	  
 	  
