--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	
 
       <a-marker preset='custom' type='pattern' url='pattern-marker1.patt'>
-          <!--<a-box position='0 0.5 0' material='color: yellow;'></a-box>-->
-		  <a-image src="pic.png"></a-image>
+          <a-box position='0 0.5 0' material='color: yellow;'></a-box>
+		  <!-- <a-image src="pic.png"></a-image>-->
       </a-marker>
 	  
 	  
