--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
 	
-
+		<a-assets>
+			<img id="ground" src="pic.png">
+		</a-assets>
       <a-marker preset='custom' type='pattern' url='pattern-marker1.patt'>
           <!--<a-box position='0 0.5 0' material='color: yellow;'></a-box>-->
-		  <a-image position='0 0.5 0' rotation="90 0 0" src="pic.png"></a-image>
+		  <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>
       </a-marker>
 	  
 	  
