--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		</a-assets>
       <a-marker preset='custom' type='pattern' url='pattern-marker1.patt'>
           <!--<a-box position='0 0.5 0' material='color: yellow;'></a-box>-->
-		  <a-plane src="#ground" height="100" width="100" rotation="+90 0 0"></a-plane>
+		  <a-plane src="#ground" height="100" width="100" rotation="-270 0 0"></a-plane>
       </a-marker>
 	  
 	  
