--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<img id="ground" src="pic.png">
 		</a-assets>
       <a-marker preset='custom' type='pattern' url='pattern-marker1.patt'>
-          <a-plane src="#ground" height="1" width="1" rotation="-90 0 0"></a-plane>
+          <a-plane src="#ground" height="100px" width="100px" rotation="-90 0 0"></a-plane>
       </a-marker>
 	  
 	  
