--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <a-scene embedded arjs>
 	
 		<a-assets>
-			<img id="ground" src="pic.png">
+			<img id="ground" src="pic2.png">
 		</a-assets>
       <a-marker preset='custom' type='pattern' url='pattern-marker1.patt'>
           <a-plane src="#ground" _height="100px" _width="100px" rotation="-90 0 0"></a-plane>
